--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "git": "git add . && git commit -m 'update' && git push",
-    "predeploy": "ng build --configuration production --base-href https://samiudeen96/SIP/",
+    "predeploy": "ng build --configuration production --base-href https://samiudeen96.github.io/SIP/",
     "deploy": "gh-pages -d dist/sip",
     "upload": "ng build --configuration production --base-href ./"
   },
